<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/descriptionTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_tile_task" />

    <TextView
        android:id="@+id/expectedConclusionDateTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expected_conclusion_date_tile_task" />

    <TextView
        android:id="@+id/completedTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completed" />

</LinearLayout>