<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.TaskActivity">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <EditText
        android:id="@+id/titleEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTv" />

    <TextView
        android:id="@+id/descriptionTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="18sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/titleEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/descriptionEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionTv" />

    <TextView
        android:id="@+id/expectedConclusionDateTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expected_conclusion_date"
        android:textSize="18sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/conclusionDateTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conclusion_date"
        android:textSize="18sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/descriptionEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/conclusionDateEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expectedConclusionDateTv" />

    <TextView
        android:id="@+id/userWhoCreatedTaskTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_who_created_the_task"
        android:textSize="18sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/conclusionDateEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/userWhoCreatedTaskEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:visibility="gone"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userWhoCreatedTaskTv" />

    <TextView
        android:id="@+id/creationDateTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creation_date"
        android:textSize="18sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/userWhoCreatedTaskEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/creationDateEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:visibility="gone"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/creationDateTv" />

    <TextView
        android:id="@+id/userWhoCompletedTaskTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_who_completed_the_task"
        android:textSize="18sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/creationDateEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/userWhoCompletedTaskEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:visibility="gone"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userWhoCompletedTaskTv" />

    <Button
        android:id="@+id/saveBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userWhoCompletedTaskEt" />
</androidx.constraintlayout.widget.ConstraintLayout>